@@ -1,5 +1,5 @@
 N:*:Default
-493
+495
 They say that you can't trust rumors.
 You have no more Black Potions of Death.
 They say that smart guys hang around at 1600'.
@@ -490,6 +490,8 @@ They say that there's a trap you can never identify, and you do want to!
 They say that you should keep Morgul sword to slay that fearsome Frodo.
 They say that clerics have special ability to identify cursed items.
 Ever *destroy*ed the Greater Vault?
+Ever *genocide*d the townies?
 They say that some dungeons have only one-way traffic.
 They say that some dungeons have no exit.
 Dance a tap with Witan boots on!
+They say that you should stop and think it twice if someone chuckles at you.
