@@ -193,7 +193,7 @@ static byte store_table[MAX_STORES-3][STORE_CHOICES][2] =
 		{ TV_SCROLL, SV_SCROLL_IDENTIFY },
 		{ TV_SCROLL, SV_SCROLL_IDENTIFY },
 		{ TV_SCROLL, SV_SCROLL_IDENTIFY },
-		{ TV_SCROLL, SV_SCROLL_IDENTIFY },
+//		{ TV_SCROLL, SV_SCROLL_IDENTIFY },
 		{ TV_SCROLL, SV_SCROLL_LIGHT },
 
 		{ TV_SCROLL, SV_SCROLL_PHASE_DOOR },
@@ -212,7 +212,10 @@ static byte store_table[MAX_STORES-3][STORE_CHOICES][2] =
 		{ TV_SCROLL, SV_SCROLL_WORD_OF_RECALL },
 		{ TV_SCROLL, SV_SCROLL_WORD_OF_RECALL },
 		{ TV_SCROLL, SV_SCROLL_WORD_OF_RECALL },
-		{ TV_SCROLL, SV_SCROLL_WORD_OF_RECALL },
+//		{ TV_SCROLL, SV_SCROLL_WORD_OF_RECALL },
+
+		{ TV_SCROLL, SV_SCROLL_DETECT_TRAP },
+		{ TV_SCROLL, SV_SCROLL_DETECT_TRAP },
 
 		{ TV_POTION, SV_POTION_RESIST_HEAT },
 		{ TV_POTION, SV_POTION_RESIST_COLD },
